the tree sheds a third of its talk, keeps every number, and the scratchpad gives back what it swallowed