@@ -1,27 +1,23 @@
 package dev.kaya;
 
 /**
- * The desktop JVM transport: the same ring statics the Kotlin
- * KayaRing exposes on Android — KayaApp is written against exactly
- * this surface and never sees which platform provided it — plus the
- * desktop bootstrap pair. attach() is the one name-resolved native
- * (call it right after loading the library; it registers everything
- * else, jvm.rs's single-entry doctrine). run() is kaya_run: the
- * calling thread becomes the UI loop and it returns only at quit,
- * with the exit code. Call run() from main, with the scene thread
- * already spawned — and on macOS launch the JVM with
- * -XstartOnFirstThread, because AppKit accepts no thread but the
- * process's first.
+ * The desktop JVM transport: the ring statics KayaApp is written
+ * against, plus the desktop bootstrap pair.
  *
- * Twin-class contract: dev.kaya.KayaRing exists twice by design —
- * this class on the desktops, the Kotlin one in android/kaya (its
- * attach takes the Activity anchor Android requires; run does not
- * exist there because Android owns the loop). The rust side registers
- * natives by name+signature against whichever class loaded it, so
- * drift on either side dies loudly at attach, on that platform.
+ * <p>attach() must be called right after loading the library — it
+ * registers everything else. run() is kaya_run: the calling thread
+ * becomes the UI loop and returns only at quit, so call it from main
+ * with the scene thread already spawned, and on macOS launch the JVM
+ * with -XstartOnFirstThread (AppKit accepts no thread but the
+ * process's first).
+ *
+ * <p>dev.kaya.KayaRing exists twice by design — this class on the
+ * desktops, the Kotlin one in android/kaya, whose attach takes an
+ * Activity anchor and which has no run. Coverage across the two is
+ * tools/check-jni.sh.
  */
 public final class KayaRing {
-    /** Register the natives (the one name-resolved entry). */
+    /** Register everything else (the one name-resolved entry). */
     public static native void attach();
 
     /** kaya_run: the calling thread becomes the UI loop. */
@@ -32,22 +28,11 @@ public final class KayaRing {
      * the caller owns, with {@code seekable[0]} set to 1 when it
      * supports random access.
      *
-     * NATIVE BECAUSE JAVA HAS NO OTHER WAY. There is no public API for
-     * wrapping a descriptor, and the obvious route is closed: reflecting
-     * into {@code FileDescriptor}'s private {@code fd} throws
-     * {@code InaccessibleObjectException} on JDK 17, since java.base is
-     * not open. Reaching it would force every kaya application to launch
-     * with {@code --add-opens java.base/java.io=ALL-UNNAMED} — a demand
-     * a binding has no business making of its users.
+     * <p>Why JNI and not reflection: docs/file-dialogs-plan.md §6f.
      *
-     * JNI has no such restriction, and this is measured rather than
-     * assumed (docs/file-dialogs-plan.md §6f): the native side builds
-     * the descriptor through the public no-arg constructor and sets the
-     * field with SetIntField, with NO flags of any kind.
-     *
-     * BLOCKS, possibly for a long time — a cloud provider may download
-     * the file before it answers — so call it from a thread you chose
-     * and post the result back.
+     * <p>BLOCKS, possibly for a long time — a cloud provider may
+     * download the file before it answers — so call it from a thread you
+     * chose and post the result back.
      */
     public static native java.io.FileDescriptor openPicked(
             long handle, int mode, int[] seekable);
@@ -65,6 +50,16 @@ public final class KayaRing {
 
     public static native long specHash();
 
+    /**
+     * The host capability word — kaya_capabilities's JNI spelling. A
+     * {@code long} because JNI has no unsigned types.
+     *
+     * <p>Both JVMs carry this: the ANSWER differs between them, so a
+     * desktop-only entry would leave Android unable to ask. Guests call
+     * {@code KayaApp.capabilities()}, never this.
+     */
+    public static native long capabilities();
+
     public static native boolean waitOccurrences();
 
     /** Return the app thread from waitOccurrences. Safe from any thread. */
@@ -79,12 +74,9 @@ public final class KayaRing {
 
     /**
      * Redeem an occurrence blob for its bytes, and release it — called
-     * by the generated decoder, never by a guest.
-     *
-     * A blob arriving in an OCCURRENCE is a handle into a table with no
-     * boundary that retires one, unlike the apply channel's batch-local
-     * index, so the decoder lets go of it while decoding and no handle
-     * ever reaches an app.
+     * by the generated decoder, never by a guest. Nothing retires an
+     * occurrence handle otherwise, so the decoder must release it while
+     * decoding.
      */
     public static native byte[] occurrenceBlob(long handle);
 
@@ -93,14 +85,9 @@ public final class KayaRing {
      * spelled with {@code /}, as UTF-8 bytes. 0 is the MISS, and the
      * caller raises with the sentence {@link #assetMissSentence} hands it.
      *
-     * <p>BYTES AND NOT A STRING, because JNI's string calls speak
-     * MODIFIED UTF-8: a name outside ASCII would reach the resolver as
+     * <p>BYTES AND NOT A STRING: JNI's string calls speak MODIFIED
+     * UTF-8, so a name outside ASCII would reach the resolver as
      * something other than what the guest typed.
-     *
-     * <p>The same entry both JVMs carry, because the JVM guest tier is
-     * one tier — a directory beside the program on the desktops, the
-     * APK's own {@code assets/} on Android, and neither class knows
-     * which route it got.
      */
     public static native long assetOpen(byte[] name);
 
@@ -110,7 +97,7 @@ public final class KayaRing {
     /**
      * Register an open asset's bytes into the pending blob table and
      * return the handle a record carries. The bytes never enter the
-     * JVM's heap — this is the redemption a font or an icon takes.
+     * JVM's heap.
      */
     public static native long assetBlob(long handle);
 
@@ -119,8 +106,7 @@ public final class KayaRing {
 
     /**
      * Why {@code assetOpen(name)} would answer 0, as UTF-8 bytes; empty
-     * means the name resolves. The sentence has ONE author (the core),
-     * so every language raises the same words.
+     * means the name resolves.
      */
     public static native byte[] assetMissSentence(byte[] name);
 
